// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Alert /> Snapshots should match snapshot with all types 1`] = `
.c0 {
  border-radius: 4px;
  font-size: 0.875rem;
  position: relative;
  background-color: #fdfdfd;
  border: 1px solid #ccc;
  color: #000;
  padding: 12px;
}

.c1 {
  -webkit-animation: lbWRkT 300ms forwards;
  animation: lbWRkT 300ms forwards;
}

<div>
  <div
    class="c0 c1"
    role="alert"
    type="neutral"
  >
    Alert
  </div>
</div>
`;

exports[`<Alert /> Snapshots should match snapshot with all types 2`] = `
.c0 {
  border-radius: 4px;
  font-size: 0.875rem;
  position: relative;
  background-color: #e5e7f0;
  border: 1px solid #929cbf;
  color: #000;
  padding: 12px;
}

.c1 {
  -webkit-animation: lbWRkT 300ms forwards;
  animation: lbWRkT 300ms forwards;
}

<div>
  <div
    class="c0 c1"
    role="alert"
    type="info"
  >
    Alert
  </div>
</div>
`;

exports[`<Alert /> Snapshots should match snapshot with all types 3`] = `
.c0 {
  border-radius: 4px;
  font-size: 0.875rem;
  position: relative;
  background-color: #f9f2e9;
  border: 1px solid #e6caa3;
  color: #000;
  padding: 12px;
}

.c1 {
  -webkit-animation: lbWRkT 300ms forwards;
  animation: lbWRkT 300ms forwards;
}

<div>
  <div
    class="c0 c1"
    role="alert"
    type="warning"
  >
    Alert
  </div>
</div>
`;

exports[`<Alert /> Snapshots should match snapshot with all types 4`] = `
.c0 {
  border-radius: 4px;
  font-size: 0.875rem;
  position: relative;
  background-color: #fee8e7;
  border: 1px solid #faa19b;
  color: #000;
  padding: 12px;
}

.c1 {
  -webkit-animation: lbWRkT 300ms forwards;
  animation: lbWRkT 300ms forwards;
}

<div>
  <div
    class="c0 c1"
    role="alert"
    type="danger"
  >
    Alert
  </div>
</div>
`;

exports[`<Alert /> Snapshots should match snapshot with all types 5`] = `
.c0 {
  border-radius: 4px;
  font-size: 0.875rem;
  position: relative;
  background-color: #eaf4f0;
  border: 1px solid #a8d2bf;
  color: #000;
  padding: 12px;
}

.c1 {
  -webkit-animation: lbWRkT 300ms forwards;
  animation: lbWRkT 300ms forwards;
}

<div>
  <div
    class="c0 c1"
    role="alert"
    type="success"
  >
    Alert
  </div>
</div>
`;

exports[`<Alert /> Snapshots should match snapshot with closable 1`] = `
.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: transparent;
  border: 0;
  border-radius: 50%;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 5px;
  position: absolute;
  right: 10px;
  -webkit-transition: background-color 0.2s ease-in-out;
  transition: background-color 0.2s ease-in-out;
  top: 10px;
}

.c2:hover,
.c2:focus {
  background-color: rgba(0,0,0,0.1);
}

.c0 {
  border-radius: 4px;
  font-size: 0.875rem;
  position: relative;
  background-color: #fdfdfd;
  border: 1px solid #ccc;
  color: #000;
  padding: 12px;
}

.c1 {
  -webkit-animation: lbWRkT 300ms forwards;
  animation: lbWRkT 300ms forwards;
}

<div>
  <div
    class="c0 c1"
    role="alert"
    type="neutral"
  >
    <button
      aria-label="close"
      class="c2"
    >
      <svg
        height="10"
        version="1.1"
        viewBox="0 0 47.971 47.971"
        width="10"
        x="0px"
        xmlns="http://www.w3.org/2000/svg"
        y="0px"
      >
        <g>
          <path
            d="M28.228,23.986L47.092,5.122c1.172-1.171,1.172-3.071,0-4.242c-1.172-1.172-3.07-1.172-4.242,0L23.986,19.744L5.121,0.88 c-1.172-1.172-3.07-1.172-4.242,0c-1.172,1.171-1.172,3.071,0,4.242l18.865,18.864L0.879,42.85c-1.172,1.171-1.172,3.071,0,4.242 C1.465,47.677,2.233,47.97,3,47.97s1.535-0.293,2.121-0.879l18.865-18.864L42.85,47.091c0.586,0.586,1.354,0.879,2.121,0.879 s1.535-0.293,2.121-0.879c1.172-1.171,1.172-3.071,0-4.242L28.228,23.986z"
          />
        </g>
      </svg>
    </button>
    Alert
  </div>
</div>
`;

exports[`<Alert /> Snapshots should match snapshot with closable and closeText 1`] = `
.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: transparent;
  border: 0;
  border-radius: 50%;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 5px;
  position: absolute;
  right: 10px;
  -webkit-transition: background-color 0.2s ease-in-out;
  transition: background-color 0.2s ease-in-out;
  top: 10px;
  border-radius: none;
  color: #666;
  padding: 0;
  top: 12px;
}

.c2:hover,
.c2:focus {
  background-color: rgba(0,0,0,0.1);
}

.c2:hover,
.c2:focus {
  background-color: transparent;
  color: #111;
}

.c0 {
  border-radius: 4px;
  font-size: 0.875rem;
  position: relative;
  background-color: #fdfdfd;
  border: 1px solid #ccc;
  color: #000;
  padding: 12px;
}

.c1 {
  -webkit-animation: lbWRkT 300ms forwards;
  animation: lbWRkT 300ms forwards;
}

<div>
  <div
    class="c0 c1"
    role="alert"
    type="neutral"
  >
    <button
      class="c2"
    >
      <span>
        Close Now
      </span>
    </button>
    Alert
  </div>
</div>
`;
